--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ml_delai.code-workspace
 logs
 mlp.h5
 __pycache__/confusion_matrix_pretty_print.cpython-36.pyc
+__pycache__/preprocess.cpython-36.pyc
